--- a/src/yuzu/configuration/configure_general.ui
+++ b/src/yuzu/configuration/configure_general.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
-    <height>407</height>
+    <width>345</width>
+    <height>493</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,6 +30,20 @@
              <string>Search sub-directories for games</string>
             </property>
            </widget>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_2">
+            <item>
+             <widget class="QLabel" name="language_label">
+              <property name="text">
+               <string>Interface language</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QComboBox" name="language_combobox"/>
+            </item>
+           </layout>
           </item>
           <item>
            <widget class="QCheckBox" name="toggle_check_exit">
