--- a/src/yuzu/main.ui
+++ b/src/yuzu/main.ui
@@ -107,6 +107,7 @@
     <addaction name="action_Rederive"/>
     <addaction name="separator"/>
     <addaction name="action_Capture_Screenshot"/>
+    <addaction name="action_Dump_Video"/>
    </widget>
    <widget class="QMenu" name="menu_Help">
     <property name="title">
@@ -291,6 +292,14 @@
    </property>
    <property name="text">
     <string>Capture Screenshot</string>
+   </property>
+  </action>
+  <action name="action_Dump_Video">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Dump Video</string>
    </property>
   </action>
  </widget>
